# kakushin

./: .env.example  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  package.json  pyproject.toml
docs/: TECHNICAL_REQUIREMENTS.md
src/: index.ts
src/kakushin/: __init__.py  cli.py
src/kakushin/agents/: __init__.py  base.py  consistency_agent.py  memory_agent.py  quality_agent.py  storyboard_agent.py  transition_agent.py  videogen_agent.py
src/kakushin/api/: __init__.py  app.py
src/kakushin/api/routes/: __init__.py  health.py  video.py
src/kakushin/core/: __init__.py  config.py  orchestrator.py
src/kakushin/integrations/: __init__.py  cogvideox.py  wan21.py
src/kakushin/models/: __init__.py  storyboard.py  video.py
src/kakushin/utils/: __init__.py  gpu_monitor.py
tests/: __init__.py  example.test.ts
tests/e2e/: __init__.py  test_10min_video.py  test_1min_video.py
tests/e2e/scenarios/: 10min_documentary.yaml  shibuya_morning.yaml
tests/unit/: __init__.py  test_api_health.py  test_config.py  test_models.py
