[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kakushin"
version = "0.1.0"
description = "Long-form AI Video Generation Agent - 10 minute continuous cinematic video generation"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Miyabi AI", email = "ai@miyabi.dev" }
]
keywords = ["ai", "video-generation", "diffusion", "wan2.1", "cogvideox"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # Core
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "transformers>=4.35.0",
    "diffusers>=0.25.0",
    "accelerate>=0.25.0",

    # API Server
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",

    # Task Queue
    "celery[redis]>=5.3.0",
    "redis>=5.0.0",

    # Video Processing
    "opencv-python>=4.9.0",
    "imageio>=2.33.0",
    "imageio-ffmpeg>=0.4.9",

    # AI/LLM
    "anthropic>=0.18.0",
    "openai>=1.10.0",

    # Utils
    "python-dotenv>=1.0.0",
    "httpx>=0.26.0",
    "pyyaml>=6.0.1",
    "numpy>=1.26.0",
    "pillow>=10.2.0",
    "tqdm>=4.66.0",
    "structlog>=24.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]

wan21 = [
    "safetensors>=0.4.0",
    "sentencepiece>=0.1.99",
]

cogvideox = [
    "safetensors>=0.4.0",
]

all = [
    "kakushin[dev,wan21,cogvideox]",
]

[project.urls]
Homepage = "https://github.com/NozomuTajiri/kakushin"
Documentation = "https://github.com/NozomuTajiri/kakushin/blob/main/docs/TECHNICAL_REQUIREMENTS.md"
Repository = "https://github.com/NozomuTajiri/kakushin"
Issues = "https://github.com/NozomuTajiri/kakushin/issues"

[project.scripts]
kakushin = "kakushin.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/kakushin"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --cov=src --cov-report=term-missing"

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
